bluejay-validator/tests/snapshots/executable_integration_test__error@fragment_spread_target_defined.graphql.snap
---
source: bluejay-validator/tests/executable_integration_test.rs
expression: formatted_errors
input_file: bluejay-validator/tests/test_data/executable/error/fragment_spread_target_defined.graphql
---
Error: No fragment defined with name `undefinedFragment`
   ╭─[ fragment_spread_target_defined.graphql:3:8 ]
   │
 3 │     ...undefinedFragment
   │        ────────┬────────  
   │                ╰────────── No fragment defined with this name
───╯
